# weather_cli

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  cmake_install.cmake  compile_commands.json  json_data.json  main.c  main.html  meson.build  valgrind.txt  weather_cli
img2ascii/: README.md  disclosure.md
img2ascii/src/: ascii_art.h
include/: image_to_ascii.h  terminal_display_picture.h  terminal_support.h  utils.h
resources/: json_data.json
src/: +  CMakeLists.txt  build.sh  cJSON.c  image_to_ascii.c  json_data.json  main.c  make_ascii.c  terminal_display_picture.c  terminal_support.c  terminal_support.h  weather_cli
src/resources/: json_data.json  placeholder.txt
